add get news, get sponsors
