# src/models/index.js
@@ -1,9 +1,13 @@
 const { User, userSchemas } = require("./user");
 const { Notice, noticeSchemas } = require("./notice");
+const { News } = require("./news");
+const { Sponsor } = require("./sponsor");
 
 module.exports = {
   User,
   userSchemas,
   Notice,
   noticeSchemas,
+  News,
+  Sponsor,
 };
