# swagger.json
@@ -24,6 +24,14 @@
     {
       "name": "Pets",
       "description": "Pet endpoints"
+    },
+    {
+      "name": "News",
+      "description": "News endpoints"
+    },
+    {
+      "name": "Sponsor",
+      "description": "Sponsor's endpoints"
     }
   ],
   "paths": {
@@ -872,6 +880,95 @@
           },
           "500": {
             "description": "Server error"
+          }
+        }
+      }
+    },
+
+    "/news": {
+      "get": {
+        "tags": ["News"],
+        "summary": "Get news by search parameters",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "NewsSearch",
+            "description": "News search parameter (search by title or text)",
+            "schema": {
+              "type": "string",
+              "default": "empty string",
+              "example": "cat"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetNewsResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorNotFoundResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorServerResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/sponsors": {
+      "get": {
+        "tags": ["Sponsor"],
+        "summary": "Get sponsors",
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetSponsorsResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorNotFoundResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorServerResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -1743,6 +1840,157 @@
         }
       },
 
+      "GetNewsResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "imgUrl": {
+              "type": "string",
+              "description": "News image link",
+              "example": "https://www.nytimes.com/images/2023/04/16/magazine/16mag-LOR/16mag-LOR-blog480.jpg"
+            },
+            "title": {
+              "type": "string",
+              "description": "News title",
+              "example": "What I Learned Dogsitting for New York City’s Opulent Elite"
+            },
+            "text": {
+              "type": "string",
+              "description": "News text",
+              "example": "In a city of yawning class inequality, some side hustles let you glimpse how the other half lives."
+            },
+            "date": {
+              "type": "string",
+              "description": "News date",
+              "example": "2023-04-11T09:00:18+0000"
+            },
+            "url": {
+              "type": "string",
+              "description": "News link",
+              "example": "https://www.nytimes.com/2023/04/11/magazine/dogsitting-rich-new-york.html"
+            },
+            "id": {
+              "type": "string",
+              "description": "News id",
+              "example": "nyt://article/8d29f1fc-d146-509d-8ceb-5a5b17d7886b"
+            }
+          }
+        },
+        "example": [
+          {
+            "imgUrl": "https://www.nytimes.com/images/2023/04/16/magazine/16mag-LOR/16mag-LOR-blog480.jpg",
+            "title": "What I Learned Dogsitting for New York City’s Opulent Elite",
+            "text": "In a city of yawning class inequality, some side hustles let you glimpse how the other half lives.",
+            "date": "2023-04-11T09:00:18+0000",
+            "url": "https://www.nytimes.com/2023/04/11/magazine/dogsitting-rich-new-york.html",
+            "id": "nyt://article/8d29f1fc-d146-509d-8ceb-5a5b17d7886b"
+          },
+          {
+            "imgUrl": "https://www.nytimes.com/images/2023/04/04/multimedia/00VIRTUAL-VETS-01b-fmzk/00VIRTUAL-VETS-01b-fmzk-blog480.jpg",
+            "title": "The Virtual Vet Will See You Meow",
+            "text": "Veterinary telemedicine could help more pet owners access much-needed care and put anxious animals at ease, but challenges remain.",
+            "date": "2023-04-07T09:00:46+0000",
+            "url": "https://www.nytimes.com/2023/04/07/health/vet-pet-health-telemedicine.html",
+            "id": "nyt://article/992f2f7f-793c-5553-b722-348625f53a4b"
+          }
+        ]
+      },
+      "GetSponsorsResponse": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "title": {
+              "type": "string",
+              "description": "Sponsor's title",
+              "example": "Притулок для бездомних тварин 'Сіріус'"
+            },
+            "url": {
+              "type": "string",
+              "description": "Sponsor's site link",
+              "example": "https://dogcat.com.ua"
+            },
+            "adressUrl": {
+              "type": "string",
+              "description": "Sponsor's address link",
+              "example": "https://goo.gl/maps/iq8NXEUf31EAQCzc6"
+            },
+            "imageUrl": {
+              "type": "string",
+              "description": "Sponsor's image link",
+              "example": "https://storage.googleapis.com/kidslikev2_bucket/pets-support/images/sponsors/frame_287.png"
+            },
+            "address": {
+              "type": "string",
+              "description": "Sponsor's address",
+              "example": "Fedorivka, Kyiv Oblast, Ukraine, 07372"
+            },
+            "workDays": {
+              "type": "array",
+              "description": "Sponsor's work days",
+              "example": [
+                { "isOpen": false },
+                { "isOpen": false },
+                { "isOpen": false },
+                { "isOpen": false },
+                { "isOpen": false },
+                { "isOpen": true, "from": "11:00", "to": "16:00" },
+                { "isOpen": true, "from": "11:00", "to": "16:00" }
+              ]
+            },
+            "phone": {
+              "type": "string",
+              "description": "Sponsor's phone number",
+              "example": "+380931934069"
+            },
+            "email": {
+              "type": "string",
+              "description": "Sponsor's email",
+              "example": "hello@happypaw.ua"
+            }
+          }
+        },
+        "example": [
+          {
+            "title": "Притулок для бездомних тварин 'Сіріус'",
+            "url": "https://dogcat.com.ua",
+            "addressUrl": "https://goo.gl/maps/iq8NXEUf31EAQCzc6",
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/pets-support/images/sponsors/frame_287.png",
+            "address": "Fedorivka, Kyiv Oblast, Ukraine, 07372",
+            "workDays": [
+              { "isOpen": false },
+              { "isOpen": false },
+              { "isOpen": false },
+              { "isOpen": false },
+              { "isOpen": false },
+              { "isOpen": true, "from": "11:00", "to": "16:00" },
+              { "isOpen": true, "from": "11:00", "to": "16:00" }
+            ],
+            "phone": "+380931934069",
+            "email": null
+          },
+          {
+            "title": "Happy Paw",
+            "url": "https://happypaw.ua/ua",
+            "addressUrl": "https://goo.gl/maps/3RyzTYBvMr9WQWCC6",
+            "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/pets-support/images/sponsors/frame_288.png",
+            "address": "Київ, вулиця Шота Руставелі, 44 (3-й поверх, офіс 7)",
+            "workDays": [
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" },
+              { "isOpen": true, "from": "09:00", "to": "17:00" }
+            ],
+            "phone": "+380442900329",
+            "email": "hello@happypaw.ua"
+          }
+        ]
+      },
+
       "ErrorBadRequestResponse": {
         "type": "object",
         "properties": {
@@ -1753,7 +2001,6 @@
           }
         }
       },
-
       "ErrorConflictEmailResponse": {
         "type": "object",
         "properties": {
